--- a/index.html
+++ b/index.html
@@ -1,52 +1,167 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Portofolio-Zulkifli</title>
-</head>
-<body>
-    <header>
-        <div id="navbar">
-          <a href="#home">Home</a>
-          <a href="#about">About</a>
-          <a href="#project">Project</a>
-          <a href="#skill">My Skill</a>
-          <a href="#contact">Contact Me</a>
-        </div>
-    </header>
-      <main>
-        <!-- Inti (konten) Website -->
-        <section id="home">
-          <!-- Section 1 -->
-          <span class="home-span">Hallo Nama Saya <br><b class="z">Zulkifli</b></span>
-          <img class="pp" src="img/pp.png" alt="gambar Zulkifli" width="">
-          <div class="custom-shape-divider-bottom-1675371903">
-            <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-                <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
-            </svg>
-        </div>
-        </section>
-        <section id="about">
-          <!-- Section 2 -->
-          <p>halo guys</p>
-        </section>
-        <section id="project">
-          <!-- Section 3 -->
-        </section>
-        <section id="skill">
-          <!-- Section 4 -->
-        </section>
-        <section id="contact">
-          <!-- Section 5 -->
-        </section>
 
-      </main>
-      <footer>
-        <!-- Footer (kaki) Website -->
-      </footer>
-      <script type="text/javascript" src="script.js"></script> 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio Code</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header class="header">
+    <nav class="navbar">
+      <div class="navbar-container container">
+        <div>
+          <h1 class="navbar-brand">Sanket Bodake</h1>
+        </div>
+        <ul class="menu-items">
+          <li><a href="#about">About</a></li>
+          <li><a href="#my-works">Portfolio</a></li>
+          <li><a href="#contact-me">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="home-content" id="home-page">
+      <div class="name">
+        <h1>Hi, I'm Zulkifli</h1>
+        <p>A Front End Web Developer</p>
+      </div>
+      <div class="angle-down-icon">
+        <a href="#about"><i class="fas fa-angle-down"></i></a>
+      </div>
+    </div>
+  </header>
+  <section class="about-me" id="about">
+    <div class="container">
+      <div class="about-content">
+        <div class="left-content">
+          <div>
+            <h1 class="about-heading">About Me</h1>
+          </div>
+          <img src="/img/pp.png" alt="image" />
+          <p>
+            I am 19 years old I am a student from the Lhokseumawe State Polytechnic campus in Aceh Lhokseumawe
+          </p>
+          <div class="work-arrow">
+            <p>
+              <a href="#my-works">Check out my work <i class="fas fa-arrow-down"></i></a>
+            </p>
+          </div>
+        </div>
+        <div class="skills">
+          <div class="right-content">
+            <div>
+              <h1 class="skills-heading">My Skills</h1>
+            </div>
+            <div class="skills-bar">
+              <div class="bar">
+                <div class="info">
+                  <span>HTML</span>
+                </div>
+                <div class="progress-line"><span class="html"></span></div>
+                <div class="bar">
+                  <div class="info">
+                    <span>CSS</span>
+                  </div>
+                  <div class="progress-line"><span class="css"></span></div>
+                  <div class="bar">
+                    <div class="info">
+                      <span>BOOTSTRAP</span>
+                    </div>
+                    <div class="progress-line"><span class="bootstrap"></span></div>
+                    <div class="bar">
+                      <div class="info">
+                        <span>JAVASCRIPT</span>
+                      </div>
+                      <div class="progress-line"><span class="javascript"></span></div>
+                      <div class="bar">
+                        <div class="info">
+                          <span>C Programming</span>
+                        </div>
+                        <div class="progress-line"><span class="c"></span></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="work-arrow-2">
+              <p>
+                <a href="#my-works">Check out my work <i class="fas fa-arrow-down"></i></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="my-works">
+    <div class="portfolio">
+      <div class="proj-heading">
+        <h1>Portfolio</h1>
+      </div>
+      <div class="portfolio-content container">
+        <div class="proj-1">
+          <img src="/img/database.png">
+          <div class="proj1-details">
+            <h2>Database Perpustakaan</h2>
+            <p>Build Using Microsoft Access</p>
+            <button><a href="https://github.com/sanketbodke/Restaurant-Website" target="blank">View source <i
+                  class="fas fa-external-link-alt"></i></a>
+            </button>
+            <button><a href="link menuju ke?" target="blank">Try it Live <i
+                  class="fas fa-external-link-alt"></i></a>
+            </button>
+          </div>
+        </div>
+
+        <div class="proj-2">
+          <img src="https://i.postimg.cc/FR848bSm/Screenshot-76.png">
+          <div class="proj2-details">
+            <i class="fab fa-html5"></i>
+            <i class="fab fa-css3-alt"></i>
+            <h2>Profile Card</h2>
+            <p>Build Using HTML,CSS</p>
+            <button><a href="https://github.com/sanketbodke/CodePen" target="blank">View source <i
+                  class="fas fa-external-link-alt"></i></a>
+            </button>
+            <button><a href="https://codepen.io/sanketbodke/pen/NWgKyZW" target="blank">Try it Live <i
+                  class="fas fa-external-link-alt"></i></a>
+            </button>
+          </div>
+
+        </div>
+        <div class="more-work">
+          <p>
+            More
+          </p>
+          <a href="https://github.com/Zulkifli1409" target="blank">Github Me</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div class="contact" id="contact-me">
+    <div class="container">
+      <div class="contact-content">
+        <h2>Contact Me</h2>
+        <p class="mail">
+          E-mail Me <i class="fas fa-arrow-right"></i> zul140904@gmail.com
+        </p>
+        <p class="links">other social media :</p>
+        <a href="https://www.linkedin.com/in/zul-kifli-2345b624a/" target="blank"><i class="fab fa-linkedin">
+            Linkedin</i></a>
+        <a href="https://github.com/Zulkifli1409" target="blank"><i class="fab fa-github"></i> Github</a>
+        <a href="https://www.instagram.com/zulkiflii.i/" target="blank"><i class="fab fa-instagram"></i> Instagram</a>
+      </div>
+    </div>
+  </div>
+  <!-- JAVASCRIPT -->
+  <script src="app.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </body>
+
 </html>
