--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio Code</title>
+  <title>Zulkifli</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -19,6 +19,7 @@
           <h1 class="navbar-brand">Sanket Bodake</h1>
         </div>
         <ul class="menu-items">
+          <li><a href="#home-page">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#my-works">Portfolio</a></li>
           <li><a href="#contact-me">Contact</a></li>
