--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div>
             <h1 class="about-heading">About Me</h1>
           </div>
-          <img src="/img/pp.png" alt="image" />
+          <img src="https://i.ibb.co/xs008VN/pp.jpg" alt="image" />
           <p>
             I am 19 years old I am a student from the Lhokseumawe State Polytechnic campus in Aceh Lhokseumawe
           </p>
@@ -105,32 +105,28 @@
       <div class="proj-heading">
         <h1>Portfolio</h1>
       </div>
+      <!-- Project 1 -->
       <div class="portfolio-content container">
         <div class="proj-1">
           <img src="/img/database.png">
           <div class="proj1-details">
             <h2>Database Perpustakaan</h2>
             <p>Build Using Microsoft Access</p>
-            <button><a href="https://github.com/sanketbodke/Restaurant-Website" target="blank">View source <i
-                  class="fas fa-external-link-alt"></i></a>
-            </button>
-            <button><a href="link menuju ke?" target="blank">Try it Live <i
-                  class="fas fa-external-link-alt"></i></a>
-            </button>
           </div>
         </div>
 
+        <!-- Project 2 -->
         <div class="proj-2">
-          <img src="https://i.postimg.cc/FR848bSm/Screenshot-76.png">
+          <img src="https://i.ibb.co/nwHpsVP/Screenshot-627.png">
           <div class="proj2-details">
             <i class="fab fa-html5"></i>
             <i class="fab fa-css3-alt"></i>
             <h2>Profile Card</h2>
             <p>Build Using HTML,CSS</p>
-            <button><a href="https://github.com/sanketbodke/CodePen" target="blank">View source <i
+            <button><a href="https://github.com/Zulkifli1409/CARD-HTML" target="blank">View source <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
-            <button><a href="https://codepen.io/sanketbodke/pen/NWgKyZW" target="blank">Try it Live <i
+            <button><a href="https://zulkifli1409.github.io/CARD-HTML/" target="blank">Try it Live <i
                   class="fas fa-external-link-alt"></i></a>
             </button>
           </div>
