--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <!-- Project 1 -->
       <div class="portfolio-content container">
         <div class="proj-1">
-          <img src="/img/database.png">
+          <img src="https://i.ibb.co/3Yd7S1f/Screenshot-621.png">
           <div class="proj1-details">
             <h2>Database Perpustakaan</h2>
             <p>Build Using Microsoft Access</p>
